Fix button text spacing

--- a/src/session/Session.css
+++ b/src/session/Session.css
@@ -19,7 +19,7 @@
 }
 
 .sideNavButtonText {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .dataColHdr {
